Edited wiki page Installation through web user interface.

--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -1,5 +1,10 @@
 #summary How to install open realtime
 
+= Requirements =
+A fast PC
+Matlab
+
+= Downloading and installing =
  * Make a new directory, perhaps called "realtime", where you will store everything. Below, we'll refer to this as {realtime_dir}
  * Retrieve code from SVN using 
  svn co https://open-realtime-fmri.googlecode.com/svn {realtime_dir}
