--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -7,7 +7,13 @@ Matlab
 = Downloading and installing =
  * Make a new directory, perhaps called "realtime", where you will store everything. Below, we'll refer to this as {realtime_dir}
  * Retrieve code from SVN using 
+<syntaxhighlight lang="matlab">
+%hello
+fprintf('thing');
+</syntaxhighlight>
 {{{
+% hello
+
  svn co https://open-realtime-fmri.googlecode.com/svn {realtime_dir}
 }}}
  * Download spm8 from http://www.fil.ion.ucl.ac.uk/spm/software/ into {realtime_dir} and unzip
