--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -11,3 +11,11 @@ Matlab
  svn co https://open-realtime-fmri.googlecode.com/svn {realtime_dir}
 }}}
  * Download spm8 from http://www.fil.ion.ucl.ac.uk/spm/software/ into {realtime_dir} and unzip
+
+= Low latency export from Siemens Trio =
+'''These are a description of what has worked for us. However, please note you follow any advice on this page at your own risk'''
+We use the excellent gui_streamer tool from the Donders
+ * http://fieldtrip.fcdonders.nl/development/realtime/fmri?s[]=gui&s[]=streamer
+Their source and compiled code is available here
+ * http://code.google.com/p/fieldtrip/source/browse/trunk/realtime/acquisition/siemens/
+You need to copy to or share with the scanner the following two files: gui_streamer.exe and pthreadGC2.dll
