--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -13,7 +13,8 @@ Matlab
  * Download spm8 from http://www.fil.ion.ucl.ac.uk/spm/software/ into {realtime_dir} and unzip
 
 = Low latency export from Siemens Trio =
-'''These are a description of what has worked for us. However, please note you follow any advice on this page at your own risk'''
+_These are a description of what has worked for us. However, please note you follow any advice on this page at your own risk_
+
 We use the excellent gui_streamer tool from the Donders
  * http://fieldtrip.fcdonders.nl/development/realtime/fmri?s[]=gui&s[]=streamer
 Their source and compiled code is available here
