--- a/wiki/HomePage.wiki
+++ b/wiki/HomePage.wiki
@@ -6,8 +6,6 @@ Welcome to the open-realtime-fmri page.
 
 = New =
 21/3/2011 Low latency transfer from Nijmegen
-
-== Siemens realtime export  ==
+A comparison of the latencies is below, with the Siemens method on top, and the Nijmegen low latency method on the bottom. The dark blue shows the time taken to export the data from the scanner to the realtime machine, the light blue the time to convert from Dicom to Nifti format. The Nijmegen method produces data directly in Nifti format, so eliminating this delay.
 [http://open-realtime-fmri.googlecode.com/svn/wiki/images/RT_Siemens.png]
-== Nijmegen low latency export  ==
 [http://open-realtime-fmri.googlecode.com/svn/wiki/images/RT_Nijmegen.png]
